--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   <body>
     
     <div id="root"></div>
+    <div id="modals-root"></div>
 
 
     <script src="/assets/js/bootstrap.bundle.min.js"></script>
