Login from the Back-end

--- a/public/index.html
+++ b/public/index.html
@@ -4,21 +4,18 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/fontawesome/css/all.css">
-    <link rel="stylesheet" href="auth/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="auth/css/main.css">
-    <link rel="stylesheet" href="auth/css/util.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" > -->
-
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/auth/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/assets/fontawesome/css/all.css">
+    <link rel="stylesheet" href="/auth/css/main.css">
+    <link rel="stylesheet" href="/auth/css/util.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
     <title>پنل ادمین</title>
   </head>
   <body>
-    
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div id="modals-root"></div>
-
 
     <script src="/assets/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/chart.js"></script>
