--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="/auth/css/main.css">
     <link rel="stylesheet" href="/auth/css/util.css">
     <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/animate.min.css">
+
     <title>پنل ادمین</title>
   </head>
   <body>
